# brawler-arena-sandbox

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml
src/arena/: __init__.py  driver_interface.py  pygame_driver.py  simulation.py
src/brain/: __init__.py  tactics.py
src/drivers/: __init__.py  base_driver.py  mock_driver.py  pygame_driver.py  registry.py
src/eyes/: __init__.py  oracle.py  vision_pipeline.py
src/hands/: __init__.py  bezier_motion.py
tests/: test_arena.py  test_bezier_motion.py  test_dataset_generator.py  test_drivers.py  test_tactics.py  test_vision_pipeline.py
tools/: check_hud_ocr.py  dataset_generator.py  draw_labels.py  grab_frame.py  predict_overlay.py  train_yolo.py
